@@ -44,6 +44,10 @@ they occurred between. For more detailed information see the
 
 @item When GNOME Integration is loaded, the apps menu now shows the content of the GNOME Menu (uncategorized atm) [Christopher Bratusek]
 
+@item When GNOME Integration is loaded, don't remove quit and restart entries from menu [Christopher Bratusek]
+
+@item Use gnome-www-browser for displaying GNOME-Homepage instead of gnome-moz-remote [Christopher Bratusek]
+
 @item Make strings in sawfish-ui fully translatable [Alexey I. Froloff]
 @end itemize
 @item Other Changes:
