@@ -3,6 +3,12 @@
 	* lisp/sawfish/wm/tabs/tabgroup.jl
 	* lisp/sawfish/wm/util/marks.jl: fixed license header
 
+	* lisp/sawfish/wm/gnome-integration.jl: don't remove quit and restart entries from menu
+	                                        use gnome-www-browser instead of ancient gnome-moz-remote
+						display applications in the apps-menu (currently uncategorized)
+					        remove Applnk from application search paths
+						removed some yet obsolete code
+
 2009-07-25  Christopher Bratusek <zanghar@freenet.de>
 	* src/Makefile.in: include $CFLAGS in gtk-style rule
 
